log
Wed 20 Mar 2024 08:27:16 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
a37255c
Wed 20 Mar 2024 08:31:46 PM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
5f56c4e
Wed 20 Mar 2024 08:33:26 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|4
total_score: 10/70
dc098b9
Wed 20 Mar 2024 08:37:57 PM UTC: 
 exercises.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|0
df6f1c3
Wed 20 Mar 2024 08:43:22 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|3
total_score: 20/70
bb4b4f6
Wed 20 Mar 2024 08:46:56 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|2
total_score: 40/70
7392258
Wed 20 Mar 2024 08:55:41 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|2
total_score: 40/70
6ac1a34
Wed 20 Mar 2024 09:04:31 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
36df709
Sat 23 Mar 2024 12:34:38 PM UTC: 
 exercises.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:119:11: error: unused variable ‘P’ [-Werror=unused-variable]
  119 |    Stack* P = create_stack();
      |           ^
exercises.c:135:1: error: control reaches end of non-void function [-Werror=return-type]
  135 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
620ecb2
Sat 23 Mar 2024 12:47:10 PM UTC: 
 exercises.c | 23 +++++++++--------------
 1 file changed, 9 insertions(+), 14 deletions(-)
 tests:  5|1
total_score: 50/70
3799e0c
Sat 23 Mar 2024 12:47:44 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
26bdf12
Sat 23 Mar 2024 12:48:19 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
e89e887
Sat 23 Mar 2024 01:09:42 PM UTC: 
 exercises.c | 32 +++++++++++++++++++++++---------
 1 file changed, 23 insertions(+), 9 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:143:8: error: implicit declaration of function ‘isEmpty’ [-Werror=implicit-function-declaration]
  143 |     if(isEmpty(P)) return 1;)
      |        ^~~~~~~
exercises.c:143:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  143 |     if(isEmpty(P)) return 1;)
      |     ^~
exercises.c:143:29: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  143 |     if(isEmpty(P)) return 1;)
      |                             ^
exercises.c:143:29: error: expected statement before ‘)’ token
exercises.c:144:1: error: control reaches end of non-void function [-Werror=return-type]
  144 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c157c44
Sat 23 Mar 2024 01:11:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:144:1: error: control reaches end of non-void function [-Werror=return-type]
  144 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
09de884
Sat 23 Mar 2024 01:13:57 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
dae7d1e
Sat 23 Mar 2024 01:14:39 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:145:1: error: control reaches end of non-void function [-Werror=return-type]
  145 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4fe6925
Sat 23 Mar 2024 01:16:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:145:1: error: control reaches end of non-void function [-Werror=return-type]
  145 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0397b30
Sat 23 Mar 2024 01:20:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:145:1: error: control reaches end of non-void function [-Werror=return-type]
  145 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c9f12c2
Sat 23 Mar 2024 01:21:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9015c9e
Sat 23 Mar 2024 01:22:53 PM UTC: 
 exercises.c | 34 ++++++++++++++++++++++++++++++++--
 1 file changed, 32 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
1074a87
Sat 23 Mar 2024 01:24:20 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  4|1
total_score: 50/70
d49e5b4
Sat 23 Mar 2024 01:27:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
fe71722
Sat 23 Mar 2024 01:29:50 PM UTC: 
 exercises.c | 30 +++++++++++++++++++++++++++++-
 1 file changed, 29 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:185:21: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  185 |             push(P, *c);
      |                     ^~
      |                     |
      |                     char
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘char’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:189:23: error: initialization of ‘char’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  189 |             char c2 = pop(P);
      |                       ^~~
exercises.c:200:5: error: implicit declaration of function ‘free_stack’; did you mean ‘create_stack’? [-Werror=implicit-function-declaration]
  200 |     free_stack(P);
      |     ^~~~~~~~~~
      |     create_stack
cc1: all warnings being treated as errors
Compilation failed
7db03ab
